@@ -2,6 +2,10 @@
 
 	* Version 1.6.8 released
 
+2015-03-17  Uwe Schulzweida
+
+	* gradsdes: grib index file is empty (introduced in 1.6.7)
+
 2015-03-11  Uwe Schulzweida
 
 	* delname: added wildcard support
